# Blue-green-deployemnt

./: .gitignore  README.md
.github/workflows/: ci-cd.yml
app/: Dockerfile  Readme.md  pyproject.toml
app/src/: deps.py  main.py  models.py  store.py  version.py
app/tests/: conftest.py  health.py  test_items.py
infra/envs/prod/: main.tf  outputs.tf  variables.tf
infra/modules/ecr/: main.tf
infra/modules/ecs-bluegreen/: main.tf  outputs.tf  variables.tf
infra/modules/iam-oidc/: main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  outputs.tf  variables.tf
