[project]
name = "shop-api"
version = "0.1.0"
description = "Minimal FastAPI app for ECS blue/green demo"
authors = [ {name = "Jatin Kumar"} ]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.6.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]


[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing"
pythonpath = ["."]